# DiveOverlay

./: .GITIGNORE  CLAUDE.md  Cargo.toml  README.md  TODO.md  dive.csv  overlay_dive_data.py  overlay_dive_data_gui.py
crates/dive_overlay_cli/: Cargo.toml
crates/dive_overlay_cli/src/: main.rs
crates/dive_overlay_cli/tests/: cli.rs
crates/dive_overlay_core/: Cargo.toml
crates/dive_overlay_core/src/: csv_data.rs  error.rs  ffprobe.rs  lib.rs  lookup.rs  model.rs  overlay.rs  pipeline.rs  subtitle.rs  sync.rs
crates/dive_overlay_gui/: Cargo.toml
crates/dive_overlay_gui/src/: main.rs  update_check.rs
