[package]
name = "dive_overlay_cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dive_overlay_cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
dive_overlay_core = { path = "../dive_overlay_core" }

[dev-dependencies]
assert_cmd = "2.2.2"
tempfile = "3.27.0"
