[package]
name = "dive_overlay_core"
version.workspace = true
edition.workspace = true

[dependencies]
ab_glyph = "0.2.32"
chrono = "0.4.45"
csv = "1.4.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
imageproc = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
which = "8.0.4"
